--- a/templates/_includes/_nav.html
+++ b/templates/_includes/_nav.html
@@ -4,11 +4,11 @@
     <div id="brandLogo">
       <a href="/"><img src="img/digikokki-logo-test.svg"/></a>
     </div>
-    <div id="mobileNav" v-on:click="toggleClass">
+    <div id="mobileNav" @click="toggleClass()">
       valikko
     </div>
   </div>
-  <div id="pageNavContent">
+  <div id="pageNavContent" :class="{ open: navOpen }">
     <ul class="siteLinkList" id="pageLinks">
       <a href="#"><li><i class="fa fa-globe"></i> <span>Internet</span></li></a>
       <a href="#"><li><i class="fa fa-html5"></i> <span>Html</span></li></a>
