--- a/templates/_includes/_sidebar.html
+++ b/templates/_includes/_sidebar.html
@@ -10,33 +10,24 @@
   </div>
   <div id="videoContainer">
     <div id="videoContent">
-    <input type="text" name="" value="" placeholder="etsi videota">
-    <ul id="videoLinks">
-      {% paginate craft.entries.section('youtubeVideo').limit(blogSettings.postsPerPage) as info, entries %}
-      {% for entry in entries %}
-        <li>
-          <a href="{{entry.youtubeLink}}">
-          <div class="videoThumbnail">
-            {% set youtubeThumpnail = "" %}
-            {% set img_transform = {
-              mode: 'fit',
-              width: 600
-            } %}
-            {% for asset in entry.youtubeThumpnail %}
-              {% set youtubeThumpnail = asset.getUrl(img_transform) %}
-            {% endfor %}
-            <img class="img-fluid" src="{{youtubeThumpnail}}" alt="{{entry.title}}">
-          </div>
-          </a>
-          <div class="videoInfo">
-            <a href="{{entry.youtubeLink}}"><h4>{{ entry.title }}</h4></a>
-            <h6><a href="#">#reactjs</a> &middot; <span>3 vko</span></h6>
-          </div>
-        </li>
-      {% endfor %}
-    </ul>
-    <a href="#" id="showAllVideos">Näytä kaikki</a>
-  </div>
+      <div id="youtubelist">
+          <input type="text" placeholder="Etsi videota" v-model="searchkeyword">
+          <ul id="videoLinks">
+      			<li v-for="youtubeLink in filteredlist">
+              <a href="#">
+                <div class="videoThumbnail">
+                  <img v-bind:src="youtubeLink.image" lass="img-fluid"  alt="youtubeLink.title" />
+                </div>
+              </a>
+              <div class="videoInfo">
+                <a v-bind:href="youtubeLink.link" target="_blank"><h4>${ youtubeLink.title }</h4></a>
+                <h6><a href="#">#${youtubeLink.category}</a> &middot; <span>Julkaistu: ${youtubeLink.date_published}</span></h6>
+              </div>
+            </li>
+      		</ul>
+    	</div>
+      <a href="#" id="showAllVideos">Näytä kaikki</a>
+    </div>
   </div>
 </div>
 {% endblock %}
