--- a/templates/_includes/_layout.html
+++ b/templates/_includes/_layout.html
@@ -15,7 +15,6 @@
   {% include "_includes/_top-bar.html" %}
   <main id="siteContainer">
     <div id="pageContent">
-        ${ message }
         {% block content %}{% endblock %}
     </div>
     <nav id="pageNav">
@@ -27,6 +26,7 @@
   </main>
   <!--footer class="pageFooter">Footer</footer-->
   <script src="{{ ('../../bower_components/vue/dist/vue.min.js') }}"></script>
+  <script src="{{ ('../../bower_components/axios/dist/axios.min.js') }}"></script>
   <script src="{{ ('/js/scripts.js') }}"></script>
 </body>
 </html>
