--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7419,15 +7419,8 @@ footer {
   -ms-flex: 1;
       flex: 1;
   background: white;
-  width: inherit;
   width: 100%;
-  height: 250px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center; }
+  padding: 3em 2em; }
   #aboutContainer #aboutContent {
     position: relative;
     width: 280px; }
@@ -7468,8 +7461,7 @@ footer {
     padding: 0 !important; }
   #videoContainer #videoContent #videoLinks {
     width: 100%;
-    height: calc(70% - 160px);
-    overflow: auto; }
+    height: calc(70% - 160px); }
   #videoContainer #videoContent ul {
     margin: 0;
     padding: 0; }
@@ -7477,19 +7469,58 @@ footer {
       list-style: none;
       display: -ms-flexbox;
       display: flex;
-      -ms-flex-align: start;
-          align-items: flex-start;
+      -ms-flex-align: center;
+          align-items: center;
       margin-bottom: 20px; }
       #videoContainer #videoContent ul li .videoThumbnail {
-        margin-right: 15px; }
+        margin-right: 15px;
+        max-height: 75px;
+        position: relative;
+        display: inline-block;
+        background-color: #fff;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
+        #videoContainer #videoContent ul li .videoThumbnail:before {
+          content: ""; }
+        #videoContainer #videoContent ul li .videoThumbnail:after {
+          content: "";
+          border-radius: 5px;
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+          opacity: 0;
+          transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
         #videoContainer #videoContent ul li .videoThumbnail img {
+          position: relative;
+          display: block;
+          -ms-flex: none;
+              flex: none;
           width: 130px; }
+        #videoContainer #videoContent ul li .videoThumbnail:hover {
+          transform: scale(1.08, 1.08); }
+          #videoContainer #videoContent ul li .videoThumbnail:hover:after {
+            opacity: 1; }
       #videoContainer #videoContent ul li .videoInfo h4 {
-        font-size: 0.8em;
-        line-height: 1.3em; }
+        font-size: 0.9em;
+        line-height: 1.3em;
+        color: #3A3A3A;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-style: normal; }
       #videoContainer #videoContent ul li .videoInfo h6 {
         font-size: 0.7em;
-        opacity: 0.5; }
+        opacity: 0.5;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-style: normal; }
+        #videoContainer #videoContent ul li .videoInfo h6 a {
+          color: #004A97; }
+        #videoContainer #videoContent ul li .videoInfo h6 span {
+          color: #797979; }
 
 @media only screen and (max-width: 768px) {
   #pageSidebarContent {
@@ -7565,8 +7596,8 @@ footer {
   z-index: 100;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex: 0;
-      flex: 0;
+  -ms-flex: 1;
+      flex: 1;
   -ms-flex-direction: column;
       flex-direction: column;
   -ms-flex-pack: center;
