--- a/templates/_includes/_layout.html
+++ b/templates/_includes/_layout.html
@@ -27,6 +27,7 @@
   <!--footer class="pageFooter">Footer</footer-->
   <script src="{{ ('../../bower_components/vue/dist/vue.min.js') }}"></script>
   <script src="{{ ('../../bower_components/axios/dist/axios.min.js') }}"></script>
+  <script src="https://rawgit.com/TahaSh/vue-paginate/master/dist/vue-paginate.js"></script>
   <script src="{{ ('/js/scripts.js') }}"></script>
 </body>
 </html>
