--- a/_src/scss/includes/_sidebar.scss
+++ b/_src/scss/includes/_sidebar.scss
@@ -55,10 +55,13 @@
       border: none;
       margin-bottom: 20px;
       padding: 10px;
-    }
-    .jspPane{
-      margin: 0!important;
-      padding: 0!important;
+      color: #3A3A3A;
+      @include font("Montserrat", 400);
+      background: #E8EEF7;
+      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+      &:focus{
+        background: white;
+      }
     }
     #videoLinks{
       width: 100%;
@@ -82,10 +85,12 @@
           display: inline-block;
           background-color: #fff;
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-          -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
           transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
           &:before{
             content: "";
+            opacity: 0;
+            top: 25px;
+            transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
           }
           &:after {
             content: "";
@@ -98,7 +103,6 @@
             height: 100%;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
             opacity: 0;
-            -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
             transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
           }
           img{
@@ -112,6 +116,21 @@
             transform: scale(1.08, 1.08);
             &:after {
               opacity: 1;
+            }
+            &:before{
+              content: "";
+              top: 0;
+              bottom: 0;
+              margin: auto;
+              position: absolute;
+              left: 0;
+              right: 0;
+              width: 24px;
+              height: 24px;
+              background: red;
+              z-index: 10;
+              background: url(../img/play-icon.svg);
+              opacity: 0.9;
             }
           }
         }
