--- a/web/css/main.css
+++ b/web/css/main.css
@@ -7455,10 +7455,15 @@ footer {
     width: 100%;
     border: none;
     margin-bottom: 20px;
-    padding: 10px; }
-  #videoContainer #videoContent .jspPane {
-    margin: 0 !important;
-    padding: 0 !important; }
+    padding: 10px;
+    color: #3A3A3A;
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-style: normal;
+    background: #E8EEF7;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
+    #videoContainer #videoContent input:focus {
+      background: white; }
   #videoContainer #videoContent #videoLinks {
     width: 100%;
     height: calc(70% - 160px); }
@@ -7481,7 +7486,10 @@ footer {
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
         transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
         #videoContainer #videoContent ul li .videoThumbnail:before {
-          content: ""; }
+          content: "";
+          opacity: 0;
+          top: 25px;
+          transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
         #videoContainer #videoContent ul li .videoThumbnail:after {
           content: "";
           border-radius: 5px;
@@ -7504,6 +7512,20 @@ footer {
           transform: scale(1.08, 1.08); }
           #videoContainer #videoContent ul li .videoThumbnail:hover:after {
             opacity: 1; }
+          #videoContainer #videoContent ul li .videoThumbnail:hover:before {
+            content: "";
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            position: absolute;
+            left: 0;
+            right: 0;
+            width: 24px;
+            height: 24px;
+            background: red;
+            z-index: 10;
+            background: url(../img/play-icon.svg);
+            opacity: 0.9; }
       #videoContainer #videoContent ul li .videoInfo h4 {
         font-size: 0.9em;
         line-height: 1.3em;
