--- a/templates/_includes/_layout.html
+++ b/templates/_includes/_layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <!-- bower:css -->
     <!-- endbower -->
-    <link rel="stylesheet" href="{{ rev('css/main.css') }}">
+    <link rel="stylesheet" href="{{ siteUrl }}css/main.css">
     <!-- inject:css -->
     <!-- endinject -->
   </head>
@@ -28,6 +28,6 @@
   <script src="{{ ('../../bower_components/vue/dist/vue.min.js') }}"></script>
   <script src="{{ ('../../bower_components/axios/dist/axios.min.js') }}"></script>
   <script src="https://rawgit.com/TahaSh/vue-paginate/master/dist/vue-paginate.js"></script>
-  <script src="{{ ('/js/scripts.js') }}"></script>
+  <script src="{{ siteUrl }}js/scripts.js"></script>
 </body>
 </html>
