--- a/_src/scss/includes/_article.scss
+++ b/_src/scss/includes/_article.scss
@@ -26,9 +26,14 @@
     display: flex;
     flex-direction: column;
     .articleContent{
+      flex: 0 0 80%;
+      a{
+        display: block;
+      }
     }
     .articleCoverImage{
       order: 1;
+      flex: 0 0 200px;
     }
   }
 
