--- a/_src/scss/includes/_sidebar.scss
+++ b/_src/scss/includes/_sidebar.scss
@@ -2,6 +2,7 @@
   background: #F2F6FB;
   border-left: 1px solid #e4e4e4;
   z-index: 100;
+  text-overflow: ellipsis;
 }
 
 #pageSidebarContent{
@@ -67,10 +68,7 @@
       width: 100%;
       height: calc(70% - 160px);
     }
-    #showAllVideos{
-
-    }
-    ul{
+    #videoLinks{
       margin: 0;
       padding: 0;
       li{
@@ -155,6 +153,37 @@
         }
       }
     }
+  }
+}
+
+
+.paginate-links {
+  display: flex;
+  justify-content: center;
+  user-select: none;
+  margin: 20px 0;
+  padding: 0;
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 0.9em;
+    color: #0275d8;
+    a {
+      cursor: pointer;
+      @include font("Open sans");
+      color: #0275d8;
+    }
+  }
+  li.active a {
+    font-weight: bold;
+  }
+  li.next:before {
+    content: ' | ';
+    margin-right: 13px;
+    color: #ddd;
+  }
+  li.disabled a {
+    color: #ccc;
   }
 }
 
