--- a/templates/_includes/_article-list.html
+++ b/templates/_includes/_article-list.html
@@ -8,16 +8,16 @@
       {% for category in categories %}
       <a href="{{ category.url }}"><h3>#{{ category.title }}</h3></a>
       {% endfor %}
-      <a href="/blog-post.html"><h1>{{ entry.title }}</h1></a>
+      <a href="{{ entry.url }}"><h1>{{ entry.title }}</h1></a>
       <p class="time">Julkaistu: <time>{{ entry.postDate | date("m.d.Y") }}</time> · 3 kommenttia</p>
     </header>
     <section>
-      <main>
+      <main class="articleListing">
         <div class="articleContent">
           <h2>{{entry.subTitle}}</h2>
           {% set paragraphs = entry.body|split('</p>') %}
           {% set teaser = paragraphs|first ~ '</p>' %}
-          {{ teaser|raw }}
+          {{ teaser | slice(0,200) | raw   }}
           <a href="#">Lue koko artikkeli</a>
         </div>
         {% if entry.featuredImage | length %}
@@ -42,10 +42,10 @@
   </article>
   {% endfor %}
   {% if info.prevUrl %}
-  <a href="{{info.prevUrl}}" class="underline_from_right">&larr; Previous Page</a>
+  <a href="{{info.prevUrl}}" class="underline_from_right">« Edelliset | </a>
   {% endif %}
   {% if info.nextUrl %}
-  <a href="{{info.nextUrl}}" class="underline_from_left">Next Page &rarr;</a>
+  <a href="{{info.nextUrl}}" class="underline_from_left">Seuraavat »</a>
   {% endif %}
 </div>
 {% endblock %}
