--- a/templates/_includes/_top-bar.html
+++ b/templates/_includes/_top-bar.html
@@ -2,6 +2,8 @@
 <div id="topBar">
   <div class="sideBySideContainer">
     <div class="sideBySideItem">
+    </div>
+    <div class="sideBySideItem">
       <div id="pageNameHeading">Digikokki</div>
     </div>
     <div class="sideBySideItem">
