--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-{% extends "_includes/_layout" %}
+{% extends "_layouts/site" %}
 
-{% block content %}
-{% include "_includes/_article-list.html" %}
+{% block main %}
 {% endblock %}
