--- a/_src/scss/includes/_sidebar.scss
+++ b/_src/scss/includes/_sidebar.scss
@@ -49,13 +49,13 @@
 #videoContainer{
   top: 300px;
   height: 100%;
-  padding: 20px;
+  padding: 20px 20px;
   #videoContent{
     input{
       width: 100%;
       border: none;
       margin-bottom: 20px;
-      padding: 10px;
+      padding: 20px 10px;
       color: #3A3A3A;
       @include font("Montserrat", 400);
       background: #E8EEF7;
@@ -75,8 +75,9 @@
         list-style: none;
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
+        margin-bottom: 32px;
         .videoThumbnail{
+          flex: 0 0 130px;
           margin-right: 15px;
           max-height: 75px;
           position: relative;
