--- a/templates/_includes/_sidebar.html
+++ b/templates/_includes/_sidebar.html
@@ -11,14 +11,14 @@
   <div id="videoContainer">
     <div id="videoContent">
       <div id="youtubelist">
-          <input type="text" placeholder="Etsi videota" v-model="searchkeyword">
+          <input type="search" placeholder="Etsi videota" v-model="searchkeyword">
           <paginate id="videoLinks" name="filteredlist" class="paginate-list" :list="filteredlist" :per="4">
       			<li v-for="youtubeLink in paginated('filteredlist')">
-              <a href="#">
-                <div class="videoThumbnail">
-                  <img v-bind:src="youtubeLink.image" lass="img-fluid"  alt="youtubeLink.title" />
-                </div>
-              </a>
+              <div class="videoThumbnail">
+                <a href="#">
+                <img v-bind:src="youtubeLink.image" lass="img-fluid"  alt="youtubeLink.title" />
+                </a>
+              </div>
               <div class="videoInfo">
                 <a v-bind:href="youtubeLink.link" target="_blank"><h4>${ youtubeLink.title }</h4></a>
                 <h6><a href="#">#${youtubeLink.category}</a> &middot; <span>Julkaistu: ${youtubeLink.date_published}</span></h6>
