--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -17,6 +17,6 @@
   <script src="{{ siteUrl }}bower_components/vue-social-sharing/dist/vue-social-sharing.min.js"></script>
   <script src="{{ siteUrl }}bower_components/prism/prism.js"></script>
   <script src="{{ siteUrl }}js/vue-paginate.min.js"></script>
-  <script src="{{ siteUrl }}js/scripts.js"></script>
+  <script src="{{ siteUrl }}js/bundle.js"></script>
 </body>
 </html>
