--- a/_src/scss/includes/_blogPost.scss
+++ b/_src/scss/includes/_blogPost.scss
@@ -24,7 +24,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
-  background-image: url('../img/main-bg.jpg');
+  //background-image: url('../img/main-bg.jpg');
   background-position: 50% 0;
   background-size: cover;
   //filter: blur(5px);
