--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -29,9 +29,23 @@ $javascript: 			#f7df1e !default;
 	color: $javascript;
 }
 
-@import "vendor/**/*";
-@import "includes/**/*";
+// Imports
 
+// inject:vendor
+@import "_src/scss/vendor/_fonts.scss";
+@import "_src/scss/vendor/_media-queries.scss";
+
+// inject:app
+@import "_src/scss/includes/_article.scss";
+@import "_src/scss/includes/_blogPost.scss";
+@import "_src/scss/includes/_footer.scss";
+@import "_src/scss/includes/_front-page.scss";
+@import "_src/scss/includes/_nav.scss";
+@import "_src/scss/includes/_page-containers.scss";
+@import "_src/scss/includes/_panel-scroll.scss";
+@import "_src/scss/includes/_sidebar.scss";
+@import "_src/scss/includes/_top-bar.scss";
+// endinject
 
 //Base
 *{
@@ -45,3 +59,41 @@ $javascript: 			#f7df1e !default;
 html{
 	height: 100%;
 }
+
+body{
+	height: 100%;
+  @include font("Open sans");
+	-webkit-font-smoothing: subpixel-antialiased;
+}
+
+:root {
+  --color-primary: $brandColorLight;
+}
+
+
+
+//Typography
+
+
+//DesktopFirst
+@include respond-to($desktop) {
+}
+
+//LaptopFirst
+@include respond-to($laptop) {
+}
+
+//TabletFirst
+@include respond-to($tablet) {
+
+}
+
+//MobileFirst
+@include respond-to($mobile) {
+}
+
+
+
+
+// Include google fonts
+@include import-google-fonts();
