--- a/templates/_includes/_article-list.html
+++ b/templates/_includes/_article-list.html
@@ -26,7 +26,7 @@
               {% for asset in entry.featuredImage %}
                 {% set featuredImage = asset.getUrl(img_transform) %}
               {% endfor %}
-              <img class="img-fluid" src="{{featuredImage}}" alt="{{entry.title}}">
+              <!--img class="img-fluid" src="{{featuredImage}}" alt="{{entry.title}}"-->
             {% endif %}
           </a>
         </div>
