--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
     <meta name="description" content="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta10/shoelace.css">
+    <script src="https://use.fontawesome.com/9f1ccc6a33.js"></script>
     <link rel="stylesheet" href="{{ siteUrl }}css/main.min.css">
     <link rel="stylesheet" href="{{ siteUrl }}bower_components/prism/themes/prism-okaidia.css">
   </head>
 <body id="siteWrapper" {% if bodyClass is defined %}class="{{ bodyClass }}"{% endif %}>
   {% block body %}{% endblock %}
 	{% block foot %}{% endblock %}
-  <script src="{{ siteUrl }}bower_components/vue/dist/vue.min.js"></script>
-  <script src="{{ siteUrl }}bower_components/axios/dist/axios.min.js"></script>
-  <script src="{{ siteUrl }}bower_components/vue-social-sharing/dist/vue-social-sharing.min.js"></script>
-  <script src="{{ siteUrl }}bower_components/prism/prism.js"></script>
-  <script src="{{ siteUrl }}js/vue-paginate.min.js"></script>
   <script src="{{ siteUrl }}js/bundle.js"></script>
 </body>
 </html>
