--- a/_src/scss/includes/_article.scss
+++ b/_src/scss/includes/_article.scss
@@ -29,7 +29,8 @@
     .social-sharing{
       margin-top: 32px;
       i{
-        font-size: 18px;
+        font-size: 13px;
+        color: $brandColorLight;
       }
     }
   }
