--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -1,7 +1,7 @@
 // Varialbes
 $whiteText        : #e5e5e5;
 $blackText        : #222;
-$brandColorLight  : #05477c;
+$brandColorLight  : #3F72AF;
 $brandColorDark   : #065b9f;
 $brandColorActive : #6EC4E9;
 
