--- a/templates/_includes/_nav.html
+++ b/templates/_includes/_nav.html
@@ -2,7 +2,7 @@
 <div id="pageNavContainer">
   <div id="pageNavHeading">
     <div id="brandLogo">
-      <a href="/"><img src="img/digikokki-logo-test.svg"/></a>
+      <a href="/"><img src="../img/digikokki-logo-test.svg"/></a>
     </div>
     <div id="mobileNav">
       valikko
