--- a/templates/_includes/_sidebar.html
+++ b/templates/_includes/_sidebar.html
@@ -6,7 +6,7 @@
       <h2>{{ aboutSiteDetails.admin }}</h2>
       <p>{{ aboutSiteDetails.about }}</p>
     </div>
-    <img src="img/profile-image.png"/>
+    <img src="../img/profile-image.png"/>
   </div>
   <div id="videoContainer">
     <div id="videoContent">
