--- a/web/templates/_layouts/base.html
+++ b/web/templates/_layouts/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -13,5 +13,6 @@
 <body id="siteWrapper" {% if bodyClass is defined %}class="{{ bodyClass }}"{% endif %}>
   {% block body %}{% endblock %}
 	{% block foot %}{% endblock %}
+  {# NOTE: Webpack Script Bundles Auto Created By HtmlWebpackPlugin and placed here #}
 <script type="text/javascript" src="/web/js/manifest.bundle.js"></script><script type="text/javascript" src="/web/js/global.bundle.js"></script></body>
 </html>
