--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta10/shoelace.css">
     <script src="https://use.fontawesome.com/9f1ccc6a33.js"></script>
     {{ getHeadHtml() }}
-  <link href="css/main.bundle.css" rel="stylesheet"></head>
+  <link href="{{ siteUrl }}css/main.bundle.css" rel="stylesheet"></head>
 <body id="siteWrapper" {% if bodyClass is defined %}class="{{ bodyClass }}"{% endif %}>
   {% block body %}{% endblock %}
 	{% block foot %}{% endblock %}
-<script type="text/javascript" src="js/main.bundle.js"></script></body>
+<script type="text/javascript" src="{{ siteUrl }}js/main.bundle.js"></script></body>
 </html>
